<resources>
    <string name="app_name">App</string>
    <string name="login_lbl_login">LOGIN</string>
    <string name="login_btn_login">Iniciar sesión</string>
    <string name="login_txt_username">Usuario</string>
    <string name="message_to_display">Mensajeeeeeee</string>
    <string name="main_lbl_bienvenido">Bienvenido:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_article">question_article</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="usuario">Email</string>
    <string name="password">*******</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registro">Registro</string>
    <string name="cancelar">Cancelar</string>
    <string name="email_email_com">email@email.com</string>
    <string name="passwordEstrella">*********</string>
    <string name="_099099099">099099099</string>
    <string name="documento">1.234.567-8</string>
    <string name="registrobtn">Registro</string>
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="estado">Estado</string>

    <string name="get_location">Start Tracking Location</string>
    <string name="textview_hint">Press the button to start tracking your location</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f\n Timestamp: %3$tr"</string>
    <string name="no_location">No known location found</string>
    <string name="service_not_available">Geocoder Not available</string>
    <string name="invalid_lat_long_used">Invalid LAT LONG</string>
    <string name="no_address_found">No address found</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="android_image">Android Image</string>
    <string name="loading">Loading....</string>
    <string name="stop_tracking_location">Stop tracking location</string>
    <string name="start_tracking_location">Start Tracking Location</string>

    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>